workspace/log/build_2023-12-25_20-40-49/sensors/stderr.log
  File "/home/gabriel/virt_ttb/workspace/install/sensors/lib/python3.8/site-packages/sensors/message_receive_test.py", line 85
    if time.time() - self.time_last_order_issued >= 0.1
                                                      ^
SyntaxError: invalid syntax

